# GameEngine

./: .build.sh.swp  .gitignore  CMakeLists.txt  ChangesToDependencies.txt  Game.sln  ParticleSystem.sln  README.md
Dependencies/: CMakeLists.txt
Dependencies/AntTweakBar/src/: AntTweakBar.vcxproj
Dependencies/SDL2/VisualC/SDL/: SDL.vcxproj
Dependencies/SDL2/VisualC/SDLmain/: SDLmain.vcxproj
Dependencies/SOIL/: CMakeLists.txt
Dependencies/SOIL/projects/VC9/: SOIL.vcxproj
Dependencies/glew/: CMakeLists.txt  glew.pc
Dependencies/glfw/: ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Dependencies/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  RCa04056  resource.h
Engine/include/: Actor.h  Attribute.h  AttributesNamesDefines.h  BillboardRenderer.h  BillboardShader.h  Camera.h  Component.h  CubeMap.h  DefaultUniformsNames.h  DirectionalLight.h  Engine.h  FrameBuffer.h  GLErrorHandling.h  GameLoop.h  IndexBuffer.h  Input.h  Light.h  LinearMath.h  Loader.h  MainScene.h  Material.h  MatricesNamesDefines.h  Mesh.h  MeshRenderer.h  MeshShaderSource.h  MeshSoftwareRenderer.h  MeshSoftwareRendererShader.h  OSExport.h  Particle.h  ParticleBasicShader.h  ParticleMaster.h  ParticleRenderer.h  ParticleSystem.h  ParticleTexture.h  PoolAllocator.h  RawModel.h  Renderable.h  Renderer.h  RendererOpenGL.h  Scene.h  (+17 more)
Engine/include/scene/: Light.h
Engine/src/: Actor.cpp  Attribute.cpp  BillboardRenderer.cpp  Camera.cpp  CubeMap.cpp  FrameBuffer.cpp  GLErrorHandling.cpp  GameLoop.cpp  IndexBuffer.cpp  Input.cpp  Light.cpp  Loader.cpp  MainScene.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  MeshSoftwareRenderer.cpp  Particle.cpp  ParticleMaster.cpp  ParticleRenderer.cpp  ParticleSystem.cpp  RawModel.cpp  Renderer.cpp  RendererOpenGL.cpp  Scene.cpp  ServiceLocator.cpp  ShaderProgram.cpp  ShadowRenderer.cpp  SkyboxRenderer.cpp  Texture2D.cpp  Time.cpp  Transform.cpp  Vbo.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Window.cpp  dllmain.cpp
ParticleSystem/: ParticleSystem.vcxproj  ParticleSystem.vcxproj.filters
ParticleSystem/include/: Camera.h  GameLoop.h  LinearMath.h  Particle.h  ParticleSystem.h  Rect.h  Time.h  Window.h
ParticleSystem/src/: Camera.cpp  GameLoop.cpp  Particle.cpp  ParticleSystem.cpp  Window.cpp
ParticleSystemTest/: CMakeLists.txt  ParticleSystemTest.vcxproj  ParticleSystemTest.vcxproj.filters  imgui.ini
ParticleSystemTest/src/: main.cpp
